[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leopipwarehouse"
version = "0.0.1"
authors = [
  { name="Leo", email="Leoyang158@gmail.com" },
]
description = "A sample testing package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"